# battle_of_four_armies

./: .gitignore  .pylintrc  README.md  army.py  board.py  captured_fields_stats.csv  config.py  consts.py  crc.json  field.py  helloworld.py  init_data.json  jsonization.py  pyproject.toml  sim_context.py  simulation.py  stats.py  unit.py  visualization.py
.github/workflows/: pylint.yml
battle/: init_window.py
battle/army/: army.py  unit.py
battle/board/: board.py  field.py
battle/simulation/: config.py  init_window.py  sim_context.py  simulation.py  stats.py  thread_task.py
battle/visualization/: consts.py  jsonization.py  visualization.py
scripts/: all_checks.sh  cc_check.sh  formatting_check.sh  mypy_check.sh  prepare_environment.sh  pylint_check.sh  run_tests.sh
sphinx/: conf.py  index.rst
sphinx/_build/doctrees/: environment.pickle  index.doctree
sphinx/_build/doctrees/source/: battle.army.doctree  battle.board.doctree  battle.doctree  battle.simulation.doctree  battle.visualization.doctree  conf.doctree  modules.doctree
sphinx/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/_build/html/_modules/: index.html
sphinx/_build/html/_sources/source/: battle.board.rst.txt  battle.rst.txt  battle.simulation.rst.txt  modules.rst.txt
sphinx/_build/html/source/: battle.army.html  battle.board.html  battle.html  battle.simulation.html  battle.visualization.html  conf.html  modules.html
sphinx/source/: battle.army.rst  battle.visualization.rst
(+9 files in other folders)
